<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg"
    android:orientation="vertical">

    <include layout="@layout/include_header" />
    <!--IP设置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:padding="@dimen/dp_5"
            android:text="@string/ip"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:background="@drawable/border_input"
            android:hint="@string/ip_input"
            android:padding="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
    <!--端口号设置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_dkh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:padding="@dimen/dp_5"
            android:text="@string/dkh"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_dkh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:background="@drawable/border_input"
            android:hint="@string/dkh_input"
            android:padding="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
    <!--用户名设置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:padding="@dimen/dp_5"
            android:text="@string/u_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:background="@drawable/border_input"
            android:hint="@string/u_name_input"
            android:padding="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
    <!--用户密码设置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:padding="@dimen/dp_5"
            android:text="@string/u_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:background="@drawable/border_input"
            android:hint="@string/u_pwd_input"
            android:padding="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
    <!--比特率设置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_bitrate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:padding="@dimen/dp_5"
            android:text="@string/bitrate"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_bitrate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:background="@drawable/border_input"
            android:hint="@string/bitrate"
            android:padding="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_fps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="1.25"
            android:background="@drawable/border_input"
            android:hint="@string/fps"
            android:padding="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <!--分辨率设置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5">

        <TextView
            android:id="@+id/tv_resolution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:padding="@dimen/dp_5"
            android:text="@string/resolution"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <Spinner
            android:id="@+id/sp_resolution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:background="@drawable/border_input"
            android:padding="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_20"/>

        <CheckBox
            android:id="@+id/cb_autoAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:text="@string/auto_answer"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/updateStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="取消重置" />

        <Button
            android:id="@+id/btn_sure"
            style="@style/updateStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="配置完成" />

    </LinearLayout>


</LinearLayout>