<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/main_bg">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_full_name"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_25"
        android:typeface="normal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_80"/>
    <LinearLayout
        android:id="@+id/ll_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:orientation="horizontal"
        android:layout_above="@id/ll_password"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_30">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/username"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:gravity="center"/>
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_white"
            android:layout_marginLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/password"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:gravity="center"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_white"
            android:layout_marginLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        style="@style/updateStyle"
        android:layout_below="@id/ll_password"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tv_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ip"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"/>
    
</RelativeLayout>