<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_8"
        android:orientation="vertical"
        android:background="@drawable/login_border">

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:background="@drawable/login_border"
            android:text="@string/shooting"
            android:textSize="@dimen/sp_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/back"/>

        <Button
            android:id="@+id/btn_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:background="@drawable/login_border"
            android:text="@string/local_photo"
            android:textSize="@dimen/sp_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_12"
            android:background="@color/back"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:background="@drawable/login_border"
            android:text="@string/cancel"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>


</RelativeLayout>
